--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,30 @@
-.DS_STORE
 *.o
-*.py(c|o)
-*.mod.c
-*.o.cmd
-*.o.d
-modules.order
-Module.symvers
-*.ko
-*.ko.cmd
+*.lo
+*.a
+.deps
+Makefile
+Makefile.in
+*.*~
+*.sw?
+.libs
+*.pyc
+*.gcda
+*.gcno
+
+#configure
+aclocal.m4
+autom4te.cache/
+config.log
+config.status
+config.guess
+config.sub
+configure
+compile
+depcomp
+install-sh
+missing
+stamp-h1
+libtool
+ltmain.sh
+
+nbproject/*
