--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,18 @@ stamp-h1
 libtool
 ltmain.sh
 
+nw-event/test-app/event-test
+nw-event/test-app/time-test
+nw-gre/test-app/nw-helloworld/helloworld
+nw-gtpv1u/test-app/nw-helloworld/helloworld
+nw-gtpv2c/test-app/nw-egtping/egtping
+nw-gtpv2c/test-app/nw-helloworld/helloworld
+nw-gtpv1u/test-app/nw-helloworld/helloworld
+nw-gtpv2c/test-app/nw-egtping/egtping
+nw-gtpv2c/test-app/nw-helloworld/helloworld
+nw-ipv4/test-app/nw-helloworld/helloworld
+nw-mme-emu/nwLteMmeEmu
+nw-sae-gw/nwLteSaeGw
+nw-sdp/test-app/nw-helloworld/helloworld
+
 nbproject/*
